# satellite-classification

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.lambda  README.md  config.py  main.py  model.py  preprocessing.py  pyproject.toml  requirements-lambda.txt  requirements.txt  satellite_classifier.py
notebooks/: 01_quick_test.ipynb  test.ipynb
