[project]
name = "satelite"
version = "2.0.0"
description = "Satellite Image Classifier API with PyTorch + ONNX dual inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "mangum>=0.19.0",
    "numpy>=2.0.0",
    "onnxruntime>=1.17.0",
    "opencv-python-headless>=4.11.0",
    "python-multipart>=0.0.22",
    "torch>=2.10.0",
    "uvicorn>=0.40.0",
]

